Fix alignment issue with navbar-brand.

--- a/css/partials/_navbar.scss
+++ b/css/partials/_navbar.scss
@@ -13,6 +13,7 @@
 
   .navbar-brand {
     font-size: $font-size-scale-1;
+    padding-left: 0;
   }
 
   .navbar-toggle {
